# trn_adaptive_scheduling

./: .gitignore  COMMANDS.md  README.md  probabilistic_models_and_stopping_rules.md  pyproject.toml
configs/: arc_agi_trm_oracle.yaml  sudoku_hrm_fixed.yaml  sudoku_trm_10min.yaml  sudoku_trm_1h.yaml  sudoku_trm_cgar.yaml  sudoku_trm_cgar_bs64_warmup_cosine.yaml  sudoku_trm_oracle_10min.yaml  sudoku_trm_oracle_1h.yaml  sudoku_trm_oracle_cgar.yaml  text_agnews_trm.yaml  text_falcon_frozen_llm_trm_oracle_finite_discrete.yaml  text_falcon_trm_oracle_finite_discrete.yaml  text_qwen_correction_trm.yaml  text_qwen_lora_ablation.yaml  text_wikitext103_trm_fixed.yaml  text_wikitext103_trm_oracle.yaml  timeseries_stock_regression_trm.yaml
configs/oracle_sweep_arc_agi/: arc_agi_trm_oracle_delta.yaml  arc_agi_trm_oracle_finite_discrete.yaml  arc_agi_trm_oracle_hybrid.yaml  arc_agi_trm_oracle_lognormal.yaml  arc_agi_trm_oracle_mixture_exponential.yaml  arc_agi_trm_oracle_mixture_geometric.yaml  arc_agi_trm_oracle_negative_binomial.yaml  arc_agi_trm_oracle_power.yaml  arc_agi_trm_oracle_smoothed_loss.yaml
configs/oracle_sweep_wikitext/: text_wikitext103_trm_oracle_delta.yaml  text_wikitext103_trm_oracle_finite_discrete.yaml  text_wikitext103_trm_oracle_hybrid.yaml  text_wikitext103_trm_oracle_lognormal.yaml  text_wikitext103_trm_oracle_mixture_exponential.yaml  text_wikitext103_trm_oracle_mixture_geometric.yaml  text_wikitext103_trm_oracle_negative_binomial.yaml  text_wikitext103_trm_oracle_power.yaml  text_wikitext103_trm_oracle_smoothed_loss.yaml
docs/: oracle_distributions.md
scripts/: draw_arch_figures.py  export_arc_tex_tables.py  export_wikitext_lm_tex_tables.py  finetune_oracle_sweep.sh  plot_arc_arcagi_figures.py  plot_arc_quality_cost.py  plot_optimal_stop_distribution.py  render_presentation_data.py  render_wikitext_figs.py  run_oracle_sweep.sh  summarize_stopping_eval.py  validate_oracle_sweep.sh
tests/: test_cli_eval_stopping.py  test_lr_schedule.py  test_models_shapes.py  test_oracle_trace.py  test_scheduler.py  test_stopping.py  test_sudoku_data_aug.py  test_sudoku_task.py  test_text_lm_task_config.py  test_train_smoke.py  test_trm_oracle.py  test_trm_oracle_distribution.py
tex/: .latexmkrc  BYUPhys.cls  README.md  preamble.tex  quality_notes.md  references.bib  thesis.tex
tex/chapters/: 00_intro.tex  01_problem.tex  02_arc.tex  03_architecture_models.tex  03_recursive_slm.tex  04_distributions.tex  04_recursive_slm.tex  05_distributions.tex  05_stopping_rules.tex  06_stopping_rules.tex  06_training_eval.tex  07_experiments.tex  07_training_eval.tex  08_experiments.tex  08_results_figures.tex  09_discussion.tex  09_results_figures.tex  10_arc_results.tex  appendix.tex  (+3 more)
(+47 files in other folders)
