[project]
name = "diplom"
version = "0.1.0"
description = "HRM/TRM research scaffold with configurable schedulers and datasets."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "vovochka", email = "you@example.com" }]
dependencies = [
    "numpy>=2.0.0,<3",
    "pandas>=2.2.0,<3",
    "pyarrow>=19.0.0,<20",
    "torch>=2.5.0,<3",
    "datasets>=4.0.0,<5",
    "transformers>=4.50.0,<5",
    "huggingface-hub>=0.28.0,<1",
    "requests>=2.32.0,<3",
    "yfinance>=0.2.50,<1",
    "jsonargparse[signatures]>=4.41.0,<5",
    "pyyaml>=6.0.2,<7",
    "tqdm>=4.67.0,<5",
    "rich>=13.9.0,<14",
    "matplotlib>=3.10.0,<4",
    "tensorboard>=2.19.0,<3",
    "peft>=0.17.1,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "ruff>=0.9.0,<1",
]

[project.scripts]
diplom-data = "diplom.cli.data:main"
diplom-train = "diplom.cli.train:main"
diplom-validate = "diplom.cli.validate:main"
diplom-plot = "diplom.cli.plot:main"
diplom-eval-stopping = "diplom.cli.eval_stopping:main"
diplom-tex-build = "diplom.cli.tex_build:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diplom"]

